--- a/server/src/main/resources/templates/macros.vm
+++ b/server/src/main/resources/templates/macros.vm
@@ -6,9 +6,9 @@
     <span class="currency-copper">${price.copperCoins}</span>
 #end
 
-#macro(indexPagerLink $page)?page=${page}&amp;orderBy=$!{orderBy}&amp;orderDir=$!{orderDir}#end
+#macro(indexPagerLink $page)?page=${page}&amp;orderBy=$!{orderBy}&amp;orderDir=$!{orderDir}#if($query && $query.name)&amp;name=${query.name}#end#end
 
-#macro(orderLink $whenOrderBy)?page=$!{currentPage}&amp;orderBy=${whenOrderBy}#if($whenOrderBy == $orderBy && $orderDir=="asc")&amp;orderDir=desc#else&amp;orderDir=asc#end#end
+#macro(orderLink $whenOrderBy)?page=$!{currentPage}#if($query && $query.name)&amp;name=${query.name}#end&amp;orderBy=${whenOrderBy}#if($whenOrderBy == $orderBy && $orderDir=="asc")&amp;orderDir=desc#else&amp;orderDir=asc#end#end
 #macro(orderIcon $whenOrderBy)
     #if($orderBy == $whenOrderBy && $orderDir == 'asc')
         <i class="glyphicon glyphicon-arrow-down"></i>
