fixed gw2 icons that are not 64x64 (bug on gw2 side)

--- a/server/src/main/resources/static/less/styles.less
+++ b/server/src/main/resources/static/less/styles.less
@@ -176,6 +176,10 @@ a:focus,
     width: 16px;
     height: 16px;
 }
+.item-icon {
+    widht: 64px;
+    height: 64px;
+}
 
 .grid .tick {
     stroke: #ddd;
