--- a/server/src/main/resources/templates/details.vm
+++ b/server/src/main/resources/templates/details.vm
@@ -14,7 +14,7 @@
 
 <div class="page-header">
     <h1 class="rarity-${latestStats.item.rarity.toLowerCase()}">
-        <img alt="Item icon" src="${latestStats.item.iconUrl}"> ${latestStats.item.name} #if($latestStats.item.level > 0)<span title="#springMessage('details.item.levelReq')">(${latestStats.item.level})</span>#end
+        <img class="item-icon" alt="Item icon" src="${latestStats.item.iconUrl}"> ${latestStats.item.name} #if($latestStats.item.level > 0)<span title="#springMessage('details.item.levelReq')">(${latestStats.item.level})</span>#end
         <a href="http://wiki-en.guildwars2.com/wiki/${gw2.wikiName($latestStats.item.name)}"><img alt="gw2wiki" title="#springMessage('details.links.gw2wiki')" src="/static/images/gw2wiki.jpg"></a>
         <a href="https://gw2treasures.com/item/${latestStats.itemId}"><img alt="gw2treasures" title="#springMessage('details.links.gw2treasures')" src="/static/images/gw2treasures.png"></a>
     </h1>
