--- a/server/src/main/resources/templates/index.vm
+++ b/server/src/main/resources/templates/index.vm
@@ -26,12 +26,6 @@
 
 <table class="table table-striped table-bordered table-hover">
     <tr>
-        <th>&nbsp;</th>
-        <th>&nbsp;</th>
-        <th colspan="2">#springMessage("index.cols.buy")</th>
-        <th colspan="2">#springMessage("index.cols.sell")</th>
-    </tr>
-    <tr>
         <th>
             <a href="#orderLink("name")" rel="nofollow">#springMessage("index.cols.item")</a>
             #orderIcon('name')
@@ -44,7 +38,7 @@
             <a href="#orderLink("highestBidder")" rel="nofollow">#springMessage("index.cols.maxBuyer")</a>
             #orderIcon('highestBidder')
         </th>
-        <th>
+        <th class="idx-col-buy-avg">
             <a href="#orderLink("avgBidder")" rel="nofollow">#springMessage("index.cols.avgBuyer")</a>
             #orderIcon('avgBidder')
         </th>
@@ -52,7 +46,7 @@
             <a href="#orderLink("lowestSeller")" rel="nofollow">#springMessage("index.cols.minSeller")</a>
             #orderIcon('lowestSeller')
         </th>
-        <th>
+        <th class="idx-col-sell-avg">
             <a href="#orderLink("avgSeller")" rel="nofollow">#springMessage("index.cols.avgSeller")</a>
             #orderIcon('avgSeller')
         </th>
@@ -67,9 +61,9 @@
         </td>
         <td>#price(${stats.profit})</td>
         <td>#price(${stats.buyStatistics.maxPrice})</td>
-        <td>#price($mathtool.floor($stats.buyStatistics.average))</td>
+        <td class="idx-col-buy-avg">#price($mathtool.floor($stats.buyStatistics.average))</td>
         <td>#price(${stats.sellStatistics.minPrice})</td>
-        <td>#price($mathtool.floor($stats.sellStatistics.average))</td>
+        <td class="idx-col-sell-avg">#price($mathtool.floor($stats.sellStatistics.average))</td>
     </tr>
 #end
 </table>
