show basic attributes for Armors

--- a/server/src/main/resources/static/less/styles.less
+++ b/server/src/main/resources/static/less/styles.less
@@ -259,6 +259,19 @@ a:focus,
     display: inline;
 }
 
+.item-attributes {
+    padding: 0;
+}
+.item-attributes li {
+  list-style-type: none;
+}
+.item-attributes .item-attributes-modifier {
+  display: inline-block;
+  width: 45px;
+  text-align: right;
+  color: @green_normal;
+}
+
 @media (max-width: 750px) {
     .idx-col-buy-avg,
     .idx-col-sell-avg {
