--- a/server/src/main/resources/templates/details.vm
+++ b/server/src/main/resources/templates/details.vm
@@ -26,6 +26,35 @@
 </div>
 
 <div class="row">
+    <div class="col-md-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">#springMessage('details.attr.title')</h3>
+            </div>
+            <div class="panel-body">
+                <ul class="item-attributes">
+                <li>
+
+                </li>
+                #foreach($attr in $latestStats.item.details.attributes.attributes)
+                <li>
+                    <span class="item-attributes-modifier">+&nbsp;${attr.modifier}</span>
+                    <span class="item-attributes-name">#springMessage("details.attr.${attr.attribute}")</span>
+                </li>
+                #end
+                <li>&nbsp;</li>
+                <li>#springMessage("details.rarity.${latestStats.item.rarity}")</li>
+                #if($latestStats.item.type == "Armor")
+                <li>#springMessage("details.weightClass.${latestStats.item.details.weightClass}")</li>
+                <li>#springMessage("details.slot.${latestStats.item.details.type}")</li>
+                #end
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
     <div class="col-md-6">
         <table class="table table-striped table-bordered table-hover">
             <tr>
