--- a/server/src/main/resources/static/less/styles.less
+++ b/server/src/main/resources/static/less/styles.less
@@ -269,7 +269,12 @@ a:focus,
   display: inline-block;
   width: 45px;
   text-align: right;
-  color: @green_normal;
+  color: @green_bright;
+}
+
+.attributes .panel-body {
+  background: url('/static/images/tooltip_bg.png') no-repeat center center;
+  color: #fff;
 }
 
 @media (max-width: 750px) {
