--- a/server/src/main/resources/templates/details.vm
+++ b/server/src/main/resources/templates/details.vm
@@ -41,10 +41,7 @@
     <a name="attributes"></a>
     #if($latestStats.item.type == "Armor" || $latestStats.item.type == "Back" || $latestStats.item.type == "Trinket" || $latestStats.item.type == "UpgradeComponent" || $latestStats.item.type == "Weapon")
     <div class="col-md-4">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">#springMessage('details.attr.title')</h3>
-            </div>
+        <div class="panel panel-default attributes">
             <div class="panel-body">
                 <ul class="item-attributes">
                 #if($latestStats.item.type == "Weapon")
