added required level to details tooltip box, changed weapon strength display

--- a/server/src/main/resources/static/less/styles.less
+++ b/server/src/main/resources/static/less/styles.less
@@ -272,6 +272,10 @@ a:focus,
   color: @green_bright;
 }
 
+.item-attributes .item-attributes-weapon-strength {
+  color: @green_bright;
+}
+
 .attributes .panel-body {
   background: url('/static/images/tooltip_bg.png') no-repeat center center;
   color: #fff;
