corrected brand color

--- a/server/src/main/resources/static/less/styles.less
+++ b/server/src/main/resources/static/less/styles.less
@@ -151,8 +151,7 @@ text.gw2-history-profit {
     Navigation
 */
 .navbar-default .navbar-brand {
-    /* FIXME: use a normalized color */
-    color: #C8241F;
+    color: @red_normal;
 }
 
 a,
